samples/_failures_safe/1761194818_6852d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21ea621a.c: In function ‘main’:
./samples/SAFE/__tmp_21ea621a.c:136:5: error: expected expression at end of input
  136 |     printf("Total entries: %d\n",
      |     ^~~~~~
./samples/SAFE/__tmp_21ea621a.c:136:5: error: expected declaration or statement at end of input
